<resources>
    <string name="app_name">哎嘛</string>
    <string name="main_menu_login">登录</string>
    <string name="main_menu_logout">注销</string>
    <string name="main_menu_myinfo">我的资料</string>
    <string name="main_menu_software">开源软件</string>
    <string name="main_menu_search">搜索</string>
    <string name="main_menu_post">发表</string>
    <string name="main_menu_more">更多</string>
    <string name="main_menu_send">提交</string>
    <string name="main_menu_sweep">扫一扫</string>
    <string name="main_menu_picshow">显示图片</string>
    <string name="main_menu_picnoshow">隐藏图片</string>
    <string name="main_menu_cache">清除缓存</string>
    <string name="main_menu_email">意见反馈</string>
    <string name="main_menu_about">关于我们</string>
    <string name="main_menu_setting">设置</string>
    <string name="main_menu_exit">退出应用</string>
    <string name="detail_menu_unfavorite">取消收藏</string>
    <string name="detail_menu_favorite">收藏</string>
    <string name="detail_menu_for_share">分享</string>
    <string name="detail_menu_for_report">举报</string>
    <string name="image_menu_download">保存</string>
    <string name="frame_title_news_lastest">最新资讯</string>
    <string name="frame_title_news_blog">最新博客</string>
    <string name="frame_title_news_recommend">推荐阅读</string>
    <string name="frame_title_question_ask">问答</string>
    <string name="frame_title_question_share">分享</string>
    <string name="frame_title_question_other">综合</string>
    <string name="frame_title_question_job">职业</string>
    <string name="frame_title_question_site">站务</string>
    <string name="frame_title_tweet_lastest">最新动弹</string>
    <string name="frame_title_tweet_hot">热门动弹</string>
    <string name="frame_title_tweet_my">我的动弹</string>
    <string name="frame_title_tweet_send">动弹一下</string>
    <string name="frame_title_active_lastest">最新动态</string>
    <string name="frame_title_active_atme">\@我</string>
    <string name="frame_title_active_comment">评论</string>
    <string name="frame_title_active_myself">我自己</string>
    <string name="frame_title_active_message">留言</string>
    <string name="frame_title_friend_following">关注</string>
    <string name="frame_title_friend_follower">粉丝</string>
    <string name="frame_title_favorite_software">软件</string>
    <string name="frame_title_favorite_post">话题</string>
    <string name="frame_title_favorite_code">代码</string>
    <string name="frame_title_favorite_blog">博客</string>
    <string name="frame_title_favorite_news">资讯</string>
    <string name="frame_title_software_catalog">分类</string>
    <string name="frame_title_software_recommend">推荐</string>
    <string name="frame_title_software_lastest">最新</string>
    <string name="frame_title_software_hot">热门</string>
    <string name="frame_title_software_china">国产</string>
    <string name="footbar_refresh">刷新</string>
    <string name="footbar_comment">评论</string>
    <string name="footbar_share">分享</string>
    <string name="footbar_favorite">收藏</string>
    <string name="footbar_more">更多</string>
    <string name="login_dialog_logo">开源中国</string>
    <string name="login_dialog_account">账号:</string>
    <string name="login_dialog_account_hint">输入账号/邮箱</string>
    <string name="login_dialog_password">密码:</string>
    <string name="login_dialog_password_hint">输入密码</string>
    <string name="login_dialog_reg">注册帐号</string>
    <string name="login_dialog_login">登  录</string>
    <string name="login_dialog_rememberPW">记住密码:</string>
    <string name="login_dialog_autoLogin">自动登录:</string>
    <string name="login_dialog_rememberMe">记住我的登录信息</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="news_detail_head_title">新闻正文</string>
    <string name="news_detail_lable_pub">发布于</string>
    <string name="question_detail_head_title">帖子正文</string>
    <string name="question_pub_head_title">我要发帖</string>
    <string name="blog_detail_head_title">博客正文</string>
    <string name="software_detail_head_title">软件详情</string>
    <string name="tweet_detail_head_title">动弹详情</string>
    <string name="tweet_pub_head_title">动弹一下</string>
    <string name="tweet_chatfooter_cancel_rcd">手指上滑，取消发送</string>
    <string name="tweet_chatfooter_cancel_rcd_release">松开手指，取消发送</string>
    <string name="tweet_chatfooter_too_short">录音时间太短</string>
    <string name="message_detail_head_title">我和%s的对话</string>
    <string name="user_center_head_title">用户空间</string>
    <string name="user_friend_head_title">我的好友</string>
    <string name="user_friend_follower">关注(%d)</string>
    <string name="user_friend_fans">粉丝(%d)</string>
    <string name="comment_list_head_title">网友评论</string>
    <string name="comment_listitem_type">发布于</string>
    <string name="comment_pub_head_title">评论回复</string>
    <string name="comment_pub_content_hint">输入评论</string>
    <string name="comment_reply_title">---共有 %d 条评论---</string>
    <string name="img_from_camera">手机拍照</string>
    <string name="img_from_album">手机相册</string>
    <string name="ui_insert_image">插入图片</string>
    <string name="setting_head_title">系统设置</string>
    <string name="capture_head_title">扫一扫</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="tab_name_article">资讯</string>
    <string name="tab_name_question">问答</string>
    <string name="tab_name_tweet">动弹</string>
    <string name="tab_name_me">我</string>
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="loading">加载中…</string>
    <string name="loading_no_more">没有更多数据.</string>
    <string name="publish_comment">写点什么吧</string>
    <string name="software_license">开源协议 :</string>
    <string name="software_language">开发语言 :</string>
    <string name="software_os">操作系统 :</string>
    <string name="software_recordtime">收录时间 :</string>
    <string name="software_index">软件首页</string>
    <string name="software_download">软件下载</string>
    <string name="software_document">软件文档</string>
    <string name="from_mobile">来自:手机</string>
    <string name="from_android">来自:Android</string>
    <string name="from_iphone">来自:Iphone</string>
    <string name="from_windows_phone">来自:Windows Phone</string>
    <string name="from_wechat">来自:微信</string>
    <string name="unlogin">未登录</string>
    <string name="unlogin_tip">您还未登录\r\n点击屏幕登录</string>
    <string name="hint_username">输入账号/邮箱</string>
    <string name="hint_password">密码</string>
    <string name="login">登录</string>
    <string name="tip_please_input_username">请输入用户名</string>
	<string name="tip_please_input_password">请输入密码</string>
    <string name="progress_login">正在登录…</string>
    <string name="tip_login_error_for_network">对不起,无法登录.</string>
    <string name="tip_no_internet">当前没有可用的网络链接</string>
    <string name="actionbar_title_news">资讯</string>
    <string name="actionbar_title_blog">博客</string>
    <string name="actionbar_title_software">软件</string>
    <string name="actionbar_title_question">帖子</string>
    <string name="actionbar_title_tweet">动弹</string>
    <string name="actionbar_title_detail">详情</string>
    <string name="tip_logout_success">注销成功.</string>
    <string name="picture_save_path">图片缓存路径</string>
    <string name="current_picture_save_path">目前路径：%s</string>
    <string name="load_picture">加载图片</string>
    <string name="clear_cache">清除缓存</string>
    <string name="check_udpdate">检查更新</string>
    <string name="oss_license">开源协议</string>
    <string name="feedback">意见反馈</string>
    <string name="grade">去评分</string>
    <string name="about_us">关于</string>
    <string name="actionbar_title_settings">设置</string>
    <string name="actionbar_title_about">关于</string>
    <string name="author">开发者</string>
    <string name="author_name">Tonlin</string>
    <string name="author_center">http://my.oschina.net/u/142883</string>
    <string name="oscgit">OSC Git</string>
    <string name="osc_git_path">http://git.oschina.net/tonlin/android-app</string>
    <string name="actionbar_title_profile">个人中心</string>
    <string name="favorite">收藏</string>
    <string name="following">关注</string>
    <string name="follower">粉丝</string>
    <string name="join_time">加入时间:</string>
    <string name="location">所在地区:</string>
    <string name="development_platform">开发平台:</string>
    <string name="academic_focus">专长领域:</string>
    <string name="actionbar_title_message_public">留言</string>
    <string name="actionbar_title_message_detail">对话</string>
    <string name="actionbar_title_question_public">发帖</string>
    <string name="actionbar_title_tweet_public">动弹一下</string>
    <string name="actionbar_title_reply_comment">回复评论</string>
    <string name="choose_picture">选择图片</string>
    <string name="clear_message">清除文字吗?</string>
    <string name="ok">确定</string>
    <string name="question_title_hint">标题</string>
    <string name="question_public_content">内容</string>
    <string name="question_public_category">分类: %s</string>
    <string name="question_public_let_me_know">有人回答时邮件通知我</string>
    <string name="tip_title_empty">标题不能为空哦</string>
    <string name="tip_content_empty">内容不能为空哦</string>
    <string name="actionbar_title_user_center">用户中心</string>
    <string name="following_count">关注:%s</string>
    <string name="follower_count">粉丝:%s</string>
    <string name="private_message">私信</string>
    <string name="follow_user">关注</string>
    <string name="unfollow_user">取消关注</string>
    <string name="follow_each_other">取消互粉</string>
    <string name="latest_login_time">最近登录:%s</string>
    <string name="category">分类</string>
    <string name="blog">博客</string>
    <string name="blog_count">博客(%s)</string>
    <string name="information">资料</string>
    <string name="edit_avatar">编辑头像</string>
    <string name="logout">退出当前帐号</string>
    <string name="message_logout">退出后将无法看到个人动态,确定退出吗?</string>
    <string name="actionbar_title_friends">我的好友</string>
    <string name="actionbar_title_favorites">我的收藏</string>
    <string name="actionbar_title_ossoftware">开源软件</string>
    <string name="actionbar_title_comment">评论</string>
    <string name="actionbar_title_question_tag">%s相关</string>
    <string name="comment_count">评论:%s</string>
    <string name="answer_count">回复:%s</string>
    <string name="post_answer">回复</string>
    <string name="comment_reply_count">共有%s条评论</string>
    <string name="comment_refer_author">引用来自%s的评论</string>
    <string name="tip_comment_content_empty">"请输入评论内容"</string>
	<string name="message_delete_tweet">确定要删除这条动弹吗?</string>
	<string name="tip_del_tweet_faile">对不起,删除该动弹失败</string>
	<string name="tip_del_tweet_success">删除动弹成功</string>
	<string name="operation">操作</string>
	<string name="reply">回复</string>
	<string name="delete">删除</string>
	<string name="deleting">正在删除…</string>
	<string name="delete_success">删除成功</string>
	<string name="delete_faile">删除失败</string>
	<string name="reply_comment_to">回复“%s”的评论</string>
	<string name="comment_success">评论成功</string>
	<string name="comment_faile">评论失败</string>
    <string name="add_favorite_success">收藏成功</string>
	<string name="add_favorite_faile">收藏失败</string>
	<string name="del_favorite_success">已取消收藏</string>
	<string name="del_favorite_faile">取消收藏失败</string>
	<string name="share_to">分享到</string>
	<string name="forward_to_my_center">转发到个人空间</string>
	<string name="progress_submit">正在提交…</string>
	<string name="comment_blog">发布评论</string>
	<string name="comment_publishing">正在发布你的评论…</string>
	<string name="comment_publish_success">评论发布成功</string>
</resources>