<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ScrollView
            android:id="@+id/sv_news_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdge="none"
            android:scrollbars="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/list_item_background_normal"
                    android:orientation="horizontal"
                    android:padding="@dimen/space_8" >

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/graywhite" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/main_black"
                        android:textSize="@dimen/text_size_18"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/list_divider_color" />

                <WebView
                    android:id="@+id/webview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_8"
                    android:background="@color/list_item_background_normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="@dimen/space_8"
                    android:background="@color/list_divider_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/list_item_background_normal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_software_license"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/space_8"
                        android:text="@string/software_license"
                        android:textColor="@color/main_gray"
                        android:textSize="@dimen/text_size_16" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/list_divider_color" />

                    <TextView
                        android:id="@+id/tv_software_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/space_8"
                        android:text="@string/software_language"
                        android:textColor="@color/main_gray"
                        android:textSize="@dimen/text_size_16" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/list_divider_color" />

                    <TextView
                        android:id="@+id/tv_software_os"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/space_8"
                        android:text="@string/software_os"
                        android:textColor="@color/main_gray"
                        android:textSize="@dimen/text_size_16" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/list_divider_color" />

                    <TextView
                        android:id="@+id/tv_software_recordtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/space_8"
                        android:text="@string/software_recordtime"
                        android:textColor="@color/main_gray"
                        android:textSize="@dimen/text_size_16" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <net.oschina.app.v2.ui.empty.EmptyLayout
            android:id="@+id/error_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/list_divider_color" />

    <LinearLayout
        android:id="@+id/ly_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/list_item_background_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="4dp" >

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/comment_edittext_selector"
            android:gravity="center_vertical"
            android:hint="@string/publish_comment"
            android:minHeight="40dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/main_black"
            android:textColorHint="@color/main_gray"
            android:textSize="@dimen/text_size_16" />

        <View
            android:layout_width="1px"
            android:layout_height="30dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/list_divider_color" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_send_comment_selector" />
    </LinearLayout>

</LinearLayout>