<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_item_background"
            android:padding="@dimen/space_8" >

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/avatar_size_big"
                android:layout_height="@dimen/avatar_size_big"
                android:layout_marginRight="@dimen/space_8"
                android:background="@drawable/ic_default_avatar" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_8"
                android:layout_toRightOf="@id/iv_avatar"
                android:text="William_Sim"
                android:textColor="@color/main_black"
                android:textSize="@dimen/text_size_18" />

            <ImageView
                android:id="@+id/iv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name"
                android:layout_marginTop="@dimen/space_8"
                android:layout_toRightOf="@id/iv_avatar"
                android:src="@drawable/userinfo_icon_male" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn_blue_selector"
                android:text="编辑头像"
                android:layout_alignBottom="@id/iv_avatar"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12" />
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:background="@color/list_divider_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ly_favorite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/list_item_background"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/space_4" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite"
                    android:textColor="@color/main_gray"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_2"
                    android:text="12345"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/text_size_12" />
            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="30dp"
                android:background="@color/list_divider_color" />

            <LinearLayout
                android:id="@+id/ly_following"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/list_item_background"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/space_4" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textColor="@color/main_gray"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_2"
                    android:text="12345"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/text_size_12" />
            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="30dp"
                android:background="@color/list_divider_color" />

            <LinearLayout
                android:id="@+id/ly_follower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/list_item_background"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/space_4" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follower"
                    android:textColor="@color/main_gray"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_2"
                    android:text="12345"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/text_size_12" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:layout_marginTop="20dp"
            android:background="@color/list_divider_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_item_background"
            android:clickable="true"
            android:orientation="horizontal"
            android:padding="@dimen/space_16" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_4"
                android:text="@string/location"
                android:textColor="@color/main_gray"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_black"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:background="@color/list_divider_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_item_background"
            android:clickable="true"
            android:orientation="horizontal"
            android:padding="@dimen/space_16" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_4"
                android:text="@string/development_platform"
                android:textColor="@color/main_gray"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_black"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:background="@color/list_divider_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_item_background"
            android:clickable="true"
            android:orientation="horizontal"
            android:padding="@dimen/space_16" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_4"
                android:text="@string/academic_focus"
                android:textColor="@color/main_gray"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_black"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>